--- a/.github/workflows/vulnerable-secret.yml
+++ b/.github/workflows/vulnerable-secret.yml
@@ -11,8 +11,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: enter username and password
+      - name: echo contexts
         run: |
-          echo ${{ secrets.password }}
-          echo ${{ inputs.code }}
+          echo "${{ secrets.password }}"
+          echo "${{ inputs.code }}"
       
